antlr/AbrilParser.py
# Generated from /Users/victoriavazquez/Codes/PycharmProjects/A01654095_Antlr/antlr/Abril.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AbrilParser ( Parser ):

    grammarFileName = "Abril.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'('", "')'", "'{'", "'}'", 
                     "','", "'sqrt'", "'**'", "'*'", "'/'", "'+'", "'-'", 
                     "'=='", "'>='", "'<='", "'const'", "'int'", "'float'", 
                     "'str'", "'if'", "'else'", "'while'", "'func'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CONST", "INT", "FLOAT", "STRING", "IF", 
                      "ELSE", "WHILE", "FUNC", "RETURN", "ID", "INTEGER", 
                      "DEC", "STR", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_statement = 2
    RULE_function = 3
    RULE_ident = 4
    RULE_data_type = 5
    RULE_expr = 6

    ruleNames =  [ "program", "declaration", "statement", "function", "ident", 
                   "data_type", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    CONST=17
    INT=18
    FLOAT=19
    STRING=20
    IF=21
    ELSE=22
    WHILE=23
    FUNC=24
    RETURN=25
    ID=26
    INTEGER=27
    DEC=28
    STR=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(AbrilParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.StatementContext)
            else:
                return self.getTypedRuleContext(AbrilParser.StatementContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.FunctionContext)
            else:
                return self.getTypedRuleContext(AbrilParser.FunctionContext,i)


        def getRuleIndex(self):
            return AbrilParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AbrilParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1035862272) != 0):
                self.state = 17
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [17, 18, 19, 20]:
                    self.state = 14
                    self.declaration()
                    pass
                elif token in [8, 21, 23, 26, 27, 28, 29]:
                    self.state = 15
                    self.statement()
                    pass
                elif token in [24]:
                    self.state = 16
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbrilParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstIntDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(AbrilParser.CONST, 0)
        def INT(self):
            return self.getToken(AbrilParser.INT, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstIntDecl" ):
                listener.enterConstIntDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstIntDecl" ):
                listener.exitConstIntDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstIntDecl" ):
                return visitor.visitConstIntDecl(self)
            else:
                return visitor.visitChildren(self)


    class ConstStrDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(AbrilParser.CONST, 0)
        def STRING(self):
            return self.getToken(AbrilParser.STRING, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstStrDecl" ):
                listener.enterConstStrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstStrDecl" ):
                listener.exitConstStrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstStrDecl" ):
                return visitor.visitConstStrDecl(self)
            else:
                return visitor.visitChildren(self)


    class VarStrDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(AbrilParser.STRING, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarStrDecl" ):
                listener.enterVarStrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarStrDecl" ):
                listener.exitVarStrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarStrDecl" ):
                return visitor.visitVarStrDecl(self)
            else:
                return visitor.visitChildren(self)


    class ConstFloatDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(AbrilParser.CONST, 0)
        def FLOAT(self):
            return self.getToken(AbrilParser.FLOAT, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstFloatDecl" ):
                listener.enterConstFloatDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstFloatDecl" ):
                listener.exitConstFloatDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstFloatDecl" ):
                return visitor.visitConstFloatDecl(self)
            else:
                return visitor.visitChildren(self)


    class VarIntDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(AbrilParser.INT, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarIntDecl" ):
                listener.enterVarIntDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarIntDecl" ):
                listener.exitVarIntDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarIntDecl" ):
                return visitor.visitVarIntDecl(self)
            else:
                return visitor.visitChildren(self)


    class VarFloatDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(AbrilParser.FLOAT, 0)
        def ident(self):
            return self.getTypedRuleContext(AbrilParser.IdentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarFloatDecl" ):
                listener.enterVarFloatDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarFloatDecl" ):
                listener.exitVarFloatDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarFloatDecl" ):
                return visitor.visitVarFloatDecl(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = AbrilParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = AbrilParser.ConstIntDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.match(AbrilParser.CONST)
                self.state = 23
                self.match(AbrilParser.INT)
                self.state = 24
                self.ident()
                self.state = 25
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 2:
                localctx = AbrilParser.ConstFloatDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(AbrilParser.CONST)
                self.state = 28
                self.match(AbrilParser.FLOAT)
                self.state = 29
                self.ident()
                self.state = 30
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 3:
                localctx = AbrilParser.ConstStrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.match(AbrilParser.CONST)
                self.state = 33
                self.match(AbrilParser.STRING)
                self.state = 34
                self.ident()
                self.state = 35
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 4:
                localctx = AbrilParser.VarIntDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.match(AbrilParser.INT)
                self.state = 38
                self.ident()
                self.state = 39
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 5:
                localctx = AbrilParser.VarFloatDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.match(AbrilParser.FLOAT)
                self.state = 42
                self.ident()
                self.state = 43
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 6:
                localctx = AbrilParser.VarStrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.match(AbrilParser.STRING)
                self.state = 46
                self.ident()
                self.state = 47
                self.match(AbrilParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbrilParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AbrilParser.ID)
            else:
                return self.getToken(AbrilParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(AbrilParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(AbrilParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.StatementContext)
            else:
                return self.getTypedRuleContext(AbrilParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class If_elseContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(AbrilParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(AbrilParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.StatementContext)
            else:
                return self.getTypedRuleContext(AbrilParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(AbrilParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else" ):
                listener.enterIf_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else" ):
                listener.exitIf_else(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_else" ):
                return visitor.visitIf_else(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.ExprContext)
            else:
                return self.getTypedRuleContext(AbrilParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = AbrilParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = AbrilParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.expr(0)
                self.state = 52
                self.match(AbrilParser.T__1)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 2:
                localctx = AbrilParser.If_elseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(AbrilParser.IF)
                self.state = 57
                self.match(AbrilParser.T__2)
                self.state = 58
                self.expr(0)
                self.state = 59
                self.match(AbrilParser.T__3)
                self.state = 60
                self.match(AbrilParser.T__4)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                    self.state = 61
                    self.statement()
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 67
                self.match(AbrilParser.T__5)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 68
                    self.match(AbrilParser.ELSE)
                    self.state = 69
                    self.match(AbrilParser.T__4)
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                        self.state = 70
                        self.statement()
                        self.state = 75
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 76
                    self.match(AbrilParser.T__5)


                self.state = 79
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 3:
                localctx = AbrilParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(AbrilParser.WHILE)
                self.state = 82
                self.match(AbrilParser.T__2)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(AbrilParser.T__3)
                self.state = 85
                self.match(AbrilParser.T__4)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1017118976) != 0):
                    self.state = 86
                    self.statement()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(AbrilParser.T__5)
                self.state = 93
                self.match(AbrilParser.T__0)
                pass

            elif la_ == 4:
                localctx = AbrilParser.FunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.match(AbrilParser.ID)
                self.state = 96
                self.match(AbrilParser.T__2)
                self.state = 108
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==26:
                        self.state = 97
                        self.match(AbrilParser.ID)


                    pass

                elif la_ == 2:
                    self.state = 100
                    self.match(AbrilParser.ID)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 101
                        self.match(AbrilParser.T__6)
                        self.state = 102
                        self.match(AbrilParser.ID)
                        self.state = 107
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass


                self.state = 110
                self.match(AbrilParser.T__3)
                self.state = 111
                self.match(AbrilParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbrilParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Func_defContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(AbrilParser.FUNC, 0)
        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(AbrilParser.Data_typeContext,i)

        def ID(self):
            return self.getToken(AbrilParser.ID, 0)
        def RETURN(self):
            return self.getToken(AbrilParser.RETURN, 0)
        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.IdentContext)
            else:
                return self.getTypedRuleContext(AbrilParser.IdentContext,i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.StatementContext)
            else:
                return self.getTypedRuleContext(AbrilParser.StatementContext,i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(AbrilParser.DeclarationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = AbrilParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            localctx = AbrilParser.Func_defContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(AbrilParser.FUNC)
            self.state = 115
            self.data_type()
            self.state = 116
            self.match(AbrilParser.ID)
            self.state = 117
            self.match(AbrilParser.T__2)
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 118
                self.data_type()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 119
                    self.ident()


                pass

            elif la_ == 2:
                self.state = 122
                self.data_type()
                self.state = 123
                self.ident()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 124
                    self.match(AbrilParser.T__6)
                    self.state = 125
                    self.data_type()
                    self.state = 126
                    self.ident()
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


            self.state = 135
            self.match(AbrilParser.T__3)
            self.state = 136
            self.match(AbrilParser.T__4)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1019085056) != 0):
                self.state = 139
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8, 21, 23, 26, 27, 28, 29]:
                    self.state = 137
                    self.statement()
                    pass
                elif token in [17, 18, 19, 20]:
                    self.state = 138
                    self.declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(AbrilParser.RETURN)
            self.state = 145
            self.ident()
            self.state = 146
            self.match(AbrilParser.T__0)
            self.state = 147
            self.match(AbrilParser.T__5)
            self.state = 148
            self.match(AbrilParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AbrilParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AbrilParser.ExprContext,0)


        def getRuleIndex(self):
            return AbrilParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = AbrilParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ident)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(AbrilParser.ID)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 151
                self.match(AbrilParser.T__1)
                self.state = 152
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbrilParser.RULE_data_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Str_dtContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(AbrilParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr_dt" ):
                listener.enterStr_dt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr_dt" ):
                listener.exitStr_dt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr_dt" ):
                return visitor.visitStr_dt(self)
            else:
                return visitor.visitChildren(self)


    class Float_dtContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(AbrilParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_dt" ):
                listener.enterFloat_dt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_dt" ):
                listener.exitFloat_dt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat_dt" ):
                return visitor.visitFloat_dt(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(Data_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.Data_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(AbrilParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def data_type(self):

        localctx = AbrilParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_data_type)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                localctx = AbrilParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(AbrilParser.INT)
                pass
            elif token in [19]:
                localctx = AbrilParser.Float_dtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(AbrilParser.FLOAT)
                pass
            elif token in [20]:
                localctx = AbrilParser.Str_dtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(AbrilParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AbrilParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AbrilParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AbrilParser.ExprContext)
            else:
                return self.getTypedRuleContext(AbrilParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)
